--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
+{% load db_extra %}
 <div style="float:left; padding-right:20px;">
 <h3>Izvoz direktnih bremenitev:</h3>
 <form method="post">
@@ -31,19 +32,21 @@ za projekt
 <input type="submit" value="Izpiši" />
 </form>
 
-{% if installments %}
+
+{% for type, value in installments.items %}
+{% if value %}
 <form action="/export" method="POST">
 {% csrf_token %}
-
+<input type="hidden" name="type" value="{{type}}" />
+<h4>{{type|pretty_name}}</h4>
 <table>
 <tr>
 <th></th>
 <th>Referenčna številka</th>
 <th>Znesek</th>
 <th>Poravnalni račun</th>
-
 </tr>
-{% for p in installments %}
+{% for p in value %}
 <tr>
 <td><input type="checkbox" checked="checked" name="id_payement" value="{{p.id_vrstica}}" /></td>
 <td><a href="http://localhost:9080/DntPogodbe.cgi?rm=uredi_pogodbo&id_agreement={{p.id_agreement}}&uredi=1&nazaj=zahtevki&return=/DntStart.cgi?rm=dbr" target="_top">{{p.id_agreement}}</a></td>
@@ -52,9 +55,10 @@ za projekt
 </tr>
 {% endfor %}
 </table>
-<input type="submit" value="Izvozi" />
+<input type="checkbox" name="record-transaction" id="record-transaction" checked="checked" /><label for="record-transaction">Zabeleži obrok</label><input type="submit" value="Izvozi" />
 </form>
 {% endif %}
+{% endfor %}
 </div>
 <div style="float:left; padding-left:20px; border-left: 1px solid black;">
 <h3>Soglasja:</h3>
