Removed payment billing

--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,9 @@ za projekt
 </tr>
 {% endfor %}
 </table>
-<input type="checkbox" name="record-transaction" id="record-transaction" checked="checked" /><label for="record-transaction">Zabeleži obrok</label><input type="submit" value="Izvozi" />
+<!-- 
+<input type="checkbox" name="record-transaction" id="record-transaction" checked="checked" /><label for="record-transaction">Zabeleži obrok</label> --><input type="submit" value="Izvozi" />
+
 </form>
 {% endif %}
 {% endfor %}
