--- a/templates/invoices_done.html
+++ b/templates/invoices_done.html
@@ -3,6 +3,6 @@
 {% load db_extra %}
 <div style="float:left; padding-right:20px;">
 <h3>Izvozi račune</h3>
-<p>Računi izvoženi. <a href="https://docs.google.com/document/d/{{file_id}}/edit">{{file_name}}</a>.
+<p>Računi izvoženi. <a href="https://docs.google.com/document/d/{{file_id}}/edit" target="_blank">{{file_name}}</a>.
 </div>
 {% endblock %}
