--- a/templates/invoices.html
+++ b/templates/invoices.html
@@ -43,9 +43,11 @@
   </td>
 </tr> -->
 </table>
-<a href="https://docs.google.com/document/d/1D2DyCUuUyqeGBA3tDZTa-pRZhBUfOPoPk64dCjG7UD8/edit" target="_blank">Predloga za racune</a><br>
+
 <input type="submit" value="Izpiši" />
 </form>
+<br>
+<a href="https://docs.google.com/document/d/1D2DyCUuUyqeGBA3tDZTa-pRZhBUfOPoPk64dCjG7UD8/edit" target="_blank">Predloga za racune</a>
 {% if invoices %}
 <form action="/invoices/export/" method="POST">
   {% csrf_token %}
