Add version option

--- a/templates/index.html
+++ b/templates/index.html
@@ -67,6 +67,11 @@
                     </table>
                     <!--
 <input type="checkbox" name="record-transaction" id="record-transaction" checked="checked" /><label for="record-transaction">Zabeleži obrok</label> -->
+                    Verzija:
+                    <select name="version">
+                        <option value="2.1">2.1 (Stara)</option>
+                        <option value="2.2" selected>2.2</option>
+                    </select>
                     <input type="submit" value="Izvozi" />
                 </form>
             {% endif %}
