--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,15 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <head>
-<meta charset="utf-8">
-<title>{% block title %}Donator Direktne bremenitve{% endblock %}</title>
-<meta name="description" content="Direktne bremenitve">
-<meta name="author" content="smotko">
-<link rel="stylesheet" href="/static/site.css">
+    <meta charset="utf-8">
+    <title>
+        {% block title %}Donator Direktne bremenitve{% endblock %}
+    </title>
+    <meta name="description" content="Direktne bremenitve">
+    <meta name="author" content="smotko">
+    <link rel="stylesheet" href="/static/site.css">
 </head>
 <body>
     <div>
-    {% block content %} 
-    {% endblock %}
+        {% block content %}{% endblock %}
     </div>
     <script src="/static/jquery.js"></script>
     <script src="/static/donator.js"></script>
